--- a/kp.vcxproj.filters
+++ b/kp.vcxproj.filters
@@ -21,12 +21,18 @@
     <ClCompile Include="1_main.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="3_utilities.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="0_input_check.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
     <ClInclude Include="2_i_sort.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="3_utilities.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
